
- Fixed handling of MySQL default timestamp value.
-------------------------------------------------------------------------------
Changes in version 1.0

- Added options to control the start and end time for autoresponders.

- Added errors for invalid configuration options.
-------------------------------------------------------------------------------
Changes in version 0.98

- Manually invoke qmail-inject and qmail-queue separately in order to
  fully control the envelope and capture the qmail PID.

- Added a "bcc" option to allow for copying autoresponses to an address
  other than the sender.

- Add an optional separator before the copied message.

- Add a newline after the response message and after the copied header,
  to make sure there is at least one blank line between them.

- The MySQL autoresponder now supports an optional table name prefix to
  better interoperate with other applications using the same database.

- Added support for a log file or table that is not pruned.

- Updated for bglibs v2.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.97

- Completely rewrote header handling, improving its handling of headers
  split across multiple lines among other things.

- Added support for omitting parts of the copied headers.

- Internal MIME headers are now stripped from multipart messages.

- Added support for limiting the number of lines copied from the
  original message body.

- Added support for setting autoresponder options through files.

- Added an option to control the generation of the In-Reply-To: header.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.96.2
